--- a/App/detecting_bienso.ipynb
+++ b/App/detecting_bienso.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,20 +10,20 @@
     "from ultralytics import YOLO\n",
     "\n",
     "#Load model\n",
-    "model = YOLO(\"./Models_4_yolov8n_datav5/runs/detect/train/weights/best.pt\")"
+    "model = YOLO(\"../Model/Models_yolov10n_dataBienSoNhieuLoaiv4_datanoscale_anhmau1nhan/runs/detect/train/weights/best.pt\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ultralytics YOLOv8.2.100  Python-3.11.9 torch-2.1.2+cu118 CUDA:0 (NVIDIA GeForce RTX 3050 Laptop GPU, 4096MiB)\n",
-      "Setup complete  (12 CPUs, 15.7 GB RAM, 77.7/175.6 GB disk)\n"
+      "Ultralytics YOLOv8.2.79  Python-3.9.19 torch-2.4.0+cpu CPU (11th Gen Intel Core(TM) i5-1135G7 2.40GHz)\n",
+      "Setup complete  (8 CPUs, 7.8 GB RAM, 148.9/229.5 GB disk)\n"
      ]
     }
    ],
@@ -34,16 +34,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "1\n",
-      "2.1.2+cu118\n"
+      "False\n",
+      "0\n",
+      "2.4.0+cpu\n"
      ]
     }
    ],
@@ -59,18 +59,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([0.], device='cuda:0')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AssertionError",
+     "evalue": "Torch not compiled with CUDA enabled",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Kiem tra torch ket noi GPU\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mzeros\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcuda\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\anaconda3\\envs\\car_detection\\lib\\site-packages\\torch\\cuda\\__init__.py:305\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    300\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[0;32m    301\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    302\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiprocessing, you must use the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspawn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m start method\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    303\u001b[0m     )\n\u001b[0;32m    304\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_cuda_getDeviceCount\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[1;32m--> 305\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTorch not compiled with CUDA enabled\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    306\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _cudart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    307\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[0;32m    308\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    309\u001b[0m     )\n",
+      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
+     ]
     }
    ],
    "source": [
@@ -81,14 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +118,7 @@
     "    return gray_image\n",
     "\n",
     "# Ví dụ sử dụng\n",
-    "gray_img = convert_to_grayscale(\"./predict_data/xe_2.jpg\")\n",
+    "gray_img = convert_to_grayscale(\"../Predict_Data/1.jpg\")\n",
     "#gray_img = convert_to_grayscale(\"./predict_data/z3945403596223_a1e193a942d30367b0b0bee724439713.jpg\")\n",
     "# Hiển thị ảnh xám nếu có\n",
     "if gray_img is not None:\n",
@@ -134,16 +129,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "0: 448x640 2 licences, 49.0ms\n",
-      "Speed: 3.0ms preprocess, 49.0ms inference, 1.0ms postprocess per image at shape (1, 3, 448, 640)\n"
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '../image/xemay/thanh-nien-dung-tren-yen-xe-may-dang-chay.jpg'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 50\u001b[0m\n\u001b[0;32m     47\u001b[0m \u001b[38;5;66;03m#### Xử lý ảnh nếu là tệp ảnh\u001b[39;00m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_image:\n\u001b[0;32m     49\u001b[0m     \u001b[38;5;66;03m# Đọc ảnh\u001b[39;00m\n\u001b[1;32m---> 50\u001b[0m     frame \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimread\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvideo_path\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     52\u001b[0m     \u001b[38;5;66;03m# Thực hiện inference YOLOv8\u001b[39;00m\n\u001b[0;32m     53\u001b[0m     results \u001b[38;5;241m=\u001b[39m model(frame)\n",
+      "File \u001b[1;32mc:\\Users\\Acer\\anaconda3\\envs\\car_detection\\lib\\site-packages\\ultralytics\\utils\\patches.py:26\u001b[0m, in \u001b[0;36mimread\u001b[1;34m(filename, flags)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mimread\u001b[39m(filename: \u001b[38;5;28mstr\u001b[39m, flags: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mIMREAD_COLOR):\n\u001b[0;32m     16\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;124;03m    Read an image from a file.\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     24\u001b[0m \u001b[38;5;124;03m        (np.ndarray): The read image.\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 26\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m cv2\u001b[38;5;241m.\u001b[39mimdecode(\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfromfile\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43muint8\u001b[49m\u001b[43m)\u001b[49m, flags)\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../image/xemay/thanh-nien-dung-tren-yen-xe-may-dang-chay.jpg'"
      ]
     }
    ],
@@ -158,7 +156,7 @@
     "#model = YOLO(\"./Models_4_yolov8n_datav5/runs/detect/train/weights/best.pt\")\n",
     "#model = YOLO(\"./Models_5_yolov10n/runs/detect/train/weights/best.pt\")\n",
     "#model = YOLO(\"./Models_6_yolov10n_datav7/runs/detect/train/weights/best.pt\")\n",
-    "model = YOLO(\"../ThamKhao_Project/Computervisionprojects-main/ANPR_YOLOv10/weights/best.pt\")\n",
+    "# model = YOLO(\"../ThamKhao_Project/Computervisionprojects-main/ANPR_YOLOv10/weights/best.pt\")\n",
     "#model = YOLO(\"./Models_yolov10n_dataBienSoNhieuLoaiv1/runs/detect/train/weights/best.pt\")\n",
     "#model = YOLO(\"./Models_yolov10n_dataBienSoNhieuLoaiv4_datanoscale_anhmau1nhan/runs/detect/train/weights/best.pt\")\n",
     "\n",
@@ -170,8 +168,8 @@
     "#video_path = \"./predict_data/video_1.gif\"\n",
     "#video_path = \"./predict_data/VID_20220519_144619.mp4\"\n",
     "#video_path = \"./predict_data/bike_counter_10min.mp4\"\n",
-    "video_path = \"./predict_data/VID_20230506_163430.mp4\"\n",
-    "#video_path = \"./predict_data/1.jpg\"\n",
+    "# video_path = \"./predict_data/VID_20230506_163430.mp4\"\n",
+    "video_path = \"../../image/xemay/thanh-nien-dung-tren-yen-xe-may-dang-chay.jpg\"\n",
     "\n",
     "#video_path = \"./predict_data/xe_2.jpg\"\n",
     "cap = cv2.VideoCapture(video_path)\n",
@@ -505,7 +503,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "car_detection",
    "language": "python",
    "name": "python3"
   },
@@ -519,7 +517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
